tests/neg/parent-refinement.check
-- Error: tests/neg/parent-refinement.scala:5:2 ------------------------------------------------------------------------
5 |  with Ordered[Year] { // error
  |  ^^^^
  |  end of toplevel definition expected but 'with' found
